--- a/pipelines/release-elect-regression.yml
+++ b/pipelines/release-elect-regression.yml
@@ -1,3 +1,10 @@
+resource_types:
+  - name: slack-notification
+    type: docker-image
+    source:
+      repository: cfcommunity/slack-notification-resource
+      tag: latest
+
 resources:
   - name: loggregator-release-elect
     type: git
@@ -46,18 +53,6 @@ resources:
     source:
       uri: https://github.com/cloudfoundry/cf-deployment-concourse-tasks
       branch: v2.1
-
-  - name: 5m
-    type: time
-    source: {interval: 5m}
-
-  - name: daily
-    type: time
-    source:
-      start: 8:00 PM
-      stop: 9:00 PM
-      location: America/Denver
-
   - name: loggregator-ci
     type: git
     source:
@@ -70,6 +65,22 @@ resources:
       branch: master
       pool: release-elect-regression
       private_key: {{cf-loggregator-oauth-bot-key}}
+
+  - name: 5m
+    type: time
+    source: {interval: 5m}
+
+  - name: daily
+    type: time
+    source:
+      start: 8:00 PM
+      stop: 9:00 PM
+      location: America/Denver
+
+  - name: slack-alert
+    type: slack-notification
+    source:
+      url: {{slack-bot-url}}
 
 jobs:
 - name: loggregator-elect-bbl-create
@@ -178,43 +189,50 @@ jobs:
         resource: loggregator-release-elect
       - get: vars-store
         resource: deployments-loggregator
-    - task: upload-stemcell
-      file: cf-deployment-concourse-tasks/bosh-upload-stemcell-from-cf-deployment/task.yml
-      params:
-        BBL_STATE_DIR: gcp/loggregator-elect-bbl
-    - task: copy-ops-files
-      config:
-        platform: linux
-        image_resource:
-          type: docker-image
-          source: { repository: ubuntu }
-        inputs:
-        - name: bbl-state
-        - name: cf-deployment
-        outputs:
-        - name: ops-files
-        run:
-          path: /bin/bash
-          args:
-          - "-c"
-          - |
-            #!/bin/bash
-            set -ex
+    - do:
+      - task: upload-stemcell
+        file: cf-deployment-concourse-tasks/bosh-upload-stemcell-from-cf-deployment/task.yml
+        params:
+          BBL_STATE_DIR: gcp/loggregator-elect-bbl
+      - task: copy-ops-files
+        config:
+          platform: linux
+          image_resource:
+            type: docker-image
+            source: { repository: ubuntu }
+          inputs:
+          - name: bbl-state
+          - name: cf-deployment
+          outputs:
+          - name: ops-files
+          run:
+            path: /bin/bash
+            args:
+            - "-c"
+            - |
+              #!/bin/bash
+              set -ex
 
-            cp cf-deployment/operations/workarounds/use-4-azs-for-router.yml ops-files/
-            cp bbl-state/gcp/loggregator-elect-bbl/ops-files/*.yml ops-files/
+              cp cf-deployment/operations/workarounds/use-4-azs-for-router.yml ops-files/
+              cp bbl-state/gcp/loggregator-elect-bbl/ops-files/*.yml ops-files/
 
-    - task: cf-deploy
-      file: cf-deployment-concourse-tasks/bosh-deploy-with-created-release/task.yml
-      params:
-        BBL_STATE_DIR: gcp/loggregator-elect-bbl
-        SYSTEM_DOMAIN: loggregator-elect.cf-app.com
-        VARS_STORE_FILE: gcp/loggregator-elect-bbl/deployment-vars.yml
-        OPS_FILES: "clients.yml use-4-azs-for-router.yml"
-    - put: deployments-loggregator-with-changes
-      params:
-        repository: updated-vars-store
-        rebase: true
+      - task: cf-deploy
+        file: cf-deployment-concourse-tasks/bosh-deploy-with-created-release/task.yml
+        params:
+          BBL_STATE_DIR: gcp/loggregator-elect-bbl
+          SYSTEM_DOMAIN: loggregator-elect.cf-app.com
+          VARS_STORE_FILE: gcp/loggregator-elect-bbl/deployment-vars.yml
+          OPS_FILES: "clients.yml use-4-azs-for-router.yml"
+      - put: deployments-loggregator-with-changes
+        params:
+          repository: updated-vars-store
+          rebase: true
+      on_failure: &slack-failure-alert
+        put: slack-alert
+        params:
+          text: |
+            The `release-elect-regression` pipeline has failed. Please resolve any issues and ensure the pipeline lock was released. Check it out at:
+            $ATC_EXTERNAL_URL/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME
 
 - name: loggregator-latest-deploy
   serial: true
@@ -232,56 +250,58 @@ jobs:
         resource: deployments-loggregator
       - get: release
         resource: loggregator-latest
-    - task: upload-stemcell
-      file: cf-deployment-concourse-tasks/bosh-upload-stemcell-from-cf-deployment/task.yml
-      params:
-        BBL_STATE_DIR: gcp/loggregator-latest-bbl
-    - task: copy-ops-files
-      config:
-        platform: linux
-        image_resource:
-          type: docker-image
-          source: { repository: ubuntu }
-        inputs:
-        - name: bbl-state
-        - name: cf-deployment
-        - name: release
-        outputs:
-        - name: ops-files
-        run:
-          path: /bin/bash
-          args:
-          - "-c"
-          - |
-            #!/bin/bash
-            set -ex
+    - do:
+      - task: upload-stemcell
+        file: cf-deployment-concourse-tasks/bosh-upload-stemcell-from-cf-deployment/task.yml
+        params:
+          BBL_STATE_DIR: gcp/loggregator-latest-bbl
+      - task: copy-ops-files
+        config:
+          platform: linux
+          image_resource:
+            type: docker-image
+            source: { repository: ubuntu }
+          inputs:
+          - name: bbl-state
+          - name: cf-deployment
+          - name: release
+          outputs:
+          - name: ops-files
+          run:
+            path: /bin/bash
+            args:
+            - "-c"
+            - |
+              #!/bin/bash
+              set -ex
 
-            cp cf-deployment/operations/workarounds/use-4-azs-for-router.yml ops-files/
-            cp bbl-state/gcp/loggregator-latest-bbl/ops-files/*.yml ops-files/
+              cp cf-deployment/operations/workarounds/use-4-azs-for-router.yml ops-files/
+              cp bbl-state/gcp/loggregator-latest-bbl/ops-files/*.yml ops-files/
 
-            version=$(cat release/version)
-            sha=$(cat release/sha1)
+              version=$(cat release/version)
+              sha=$(cat release/sha1)
 
-            cat <<EOT >> ops-files/loggregator-version.yml
-            - type: replace
-              path: /releases/name=loggregator
-              value:
-                name: loggregator
-                url: https://bosh.io/d/github.com/cloudfoundry/loggregator?v=$version
-                version: "$version"
-                sha1: "$sha"
-            EOT
-    - task: cf-deploy
-      file: cf-deployment-concourse-tasks/bosh-deploy/task.yml
-      params:
-        BBL_STATE_DIR: gcp/loggregator-latest-bbl
-        SYSTEM_DOMAIN: loggregator-latest.cf-app.com
-        VARS_STORE_FILE: gcp/loggregator-latest-bbl/deployment-vars.yml
-        OPS_FILES: "clients.yml use-4-azs-for-router.yml loggregator-version.yml"
-    - put: deployments-loggregator-with-changes
-      params:
-        repository: updated-vars-store
-        rebase: true
+              cat <<EOT >> ops-files/loggregator-version.yml
+              - type: replace
+                path: /releases/name=loggregator
+                value:
+                  name: loggregator
+                  url: https://bosh.io/d/github.com/cloudfoundry/loggregator?v=$version
+                  version: "$version"
+                  sha1: "$sha"
+              EOT
+      - task: cf-deploy
+        file: cf-deployment-concourse-tasks/bosh-deploy/task.yml
+        params:
+          BBL_STATE_DIR: gcp/loggregator-latest-bbl
+          SYSTEM_DOMAIN: loggregator-latest.cf-app.com
+          VARS_STORE_FILE: gcp/loggregator-latest-bbl/deployment-vars.yml
+          OPS_FILES: "clients.yml use-4-azs-for-router.yml loggregator-version.yml"
+      - put: deployments-loggregator-with-changes
+        params:
+          repository: updated-vars-store
+          rebase: true
+      on_failure: *slack-failure-alert
 
 - name: cf-setup
   serial: true
@@ -304,21 +324,23 @@ jobs:
           - loggregator-latest-deploy
         resource: loggregator-latest
       - get: loggregator-ci
-    - aggregate:
-      - task: setup-loggregator-elect
-        file: loggregator-ci/tasks/release-elect-regression/setup-cf.yml
-        params:
-          SYSTEM_DOMAIN: loggregator-elect.cf-app.com
-          VARS_STORE_FILE: gcp/loggregator-elect-bbl/deployment-vars.yml
-          ORG: cf-lamb
-          SPACE: development
-      - task: setup-loggregator-latest
-        file: loggregator-ci/tasks/release-elect-regression/setup-cf.yml
-        params:
-          SYSTEM_DOMAIN: loggregator-latest.cf-app.com
-          VARS_STORE_FILE: gcp/loggregator-latest-bbl/deployment-vars.yml
-          ORG: cf-lamb
-          SPACE: development
+    - do:
+      - aggregate:
+        - task: setup-loggregator-elect
+          file: loggregator-ci/tasks/release-elect-regression/setup-cf.yml
+          params:
+            SYSTEM_DOMAIN: loggregator-elect.cf-app.com
+            VARS_STORE_FILE: gcp/loggregator-elect-bbl/deployment-vars.yml
+            ORG: cf-lamb
+            SPACE: development
+        - task: setup-loggregator-latest
+          file: loggregator-ci/tasks/release-elect-regression/setup-cf.yml
+          params:
+            SYSTEM_DOMAIN: loggregator-latest.cf-app.com
+            VARS_STORE_FILE: gcp/loggregator-latest-bbl/deployment-vars.yml
+            ORG: cf-lamb
+            SPACE: development
+      on_failure: *slack-failure-alert
 
 - name: setup-datadog
   serial: true
@@ -337,16 +359,18 @@ jobs:
         passed:
         - cf-setup
       - get: loggregator-ci
-    - task: setup-dashboard
-      file: loggregator-ci/tasks/release-elect-regression/setup-datadog-dashboard.yml
-      params:
-        DATADOG_API_KEY: {{datadog-dev-api-key}}
-        DATADOG_APP_KEY: {{datadog-dev-app-key}}
-        LATEST_SYSTEM_DOMAIN: loggregator-latest.cf-app.com
-        ELECT_SYSTEM_DOMAIN: loggregator-elect.cf-app.com
-    - put: pipeline-lock
-      params:
-        release: pipeline-lock
+    - do:
+      - task: setup-dashboard
+        file: loggregator-ci/tasks/release-elect-regression/setup-datadog-dashboard.yml
+        params:
+          DATADOG_API_KEY: {{datadog-dev-api-key}}
+          DATADOG_APP_KEY: {{datadog-dev-app-key}}
+          LATEST_SYSTEM_DOMAIN: loggregator-latest.cf-app.com
+          ELECT_SYSTEM_DOMAIN: loggregator-elect.cf-app.com
+      - put: pipeline-lock
+        params:
+          release: pipeline-lock
+      on_failure: *slack-failure-alert
 
 - name: smoke-tests
   serial: true
