--- a/pipelines/tracker.yml
+++ b/pipelines/tracker.yml
@@ -36,21 +36,18 @@ jobs:
       SPACE: "development"
   - task: run-recent-logs-smoke-tests
     file: loggregator-ci/tasks/generic-recent-logs-smoke-test.yml
-    params:
-      CYCLES: 10000
-      DELAY: "2"
-      DELAY_UNIT: "us"
+    params: &basic-smoke-details
       APP_NAME: "trkr-floodspinner"
-      LOGGREGATOR_ADDR: "wss://doppler.aws.trackerred.com:4443"
-      WAIT: 60
-      MESSAGE: "FIFTEEN-MINUTE"
-      USERNAME: {{trkr-username}}
-      PASSWORD: {{trkr-password}}
-      DATADOG_API_KEY: {{datadog-loggregator-api-key}}
       CF_API: "api.aws.trackerred.com"
-      APP_DOMAIN: "trkr-floodspinner.aws.trkr.io"
+      DATADOG_API_KEY: {{datadog-loggregator-api-key}}
+      LOGGREGATOR_ADDR: "wss://doppler.aws.trackerred.com:4443"
       ORG: "loggregator"
+      PASSWORD: {{trkr-password}}
       SPACE: "development"
+      USERNAME: {{trkr-username}}
+  - task: container metrics
+    file: loggregator-ci/tasks/container-metrics-smoke-test.yml
+    params: *basic-smoke-details
 
 - name: dripspinner
   public: false
