--- a/pipelines/pws-eu.yml
+++ b/pipelines/pws-eu.yml
@@ -40,21 +40,18 @@ jobs:
       MESSAGE: "FIFTEEN-MINUTE"
   - task: run-recent-logs-smoke-tests
     file: loggregator-ci/tasks/generic-recent-logs-smoke-test.yml
-    params:
+    params: &basic-smoke-details
+      APP_NAME: "floodspinner"
       CF_API: "api.eu-pws.pivotal.io"
-      APP_DOMAIN: "floodspinner.eu-pwsapps.io"
+      DATADOG_API_KEY: {{datadog-loggregator-api-key}}
       LOGGREGATOR_ADDR: "wss://doppler.eu-pws.pivotal.io:443"
       ORG: "system"
-      SPACE: "loggregator-team"
-      APP_NAME: "floodspinner"
-      USERNAME: {{pws-eu-username}}
       PASSWORD: {{pws-eu-password}}
-      WAIT: 60
-      CYCLES: 10000
-      DATADOG_API_KEY: {{datadog-loggregator-api-key}}
-      DELAY: "2"
-      DELAY_UNIT: "us"
-      MESSAGE: "FIFTEEN-MINUTE"
+      SPACE: "loggregator-team"
+      USERNAME: {{pws-eu-username}}
+  - task: container metrics
+    file: loggregator-ci/tasks/container-metrics-smoke-test.yml
+    params: *basic-smoke-details
 
 - name: dripspinner
   public: false
