--- a/pipelines/tracker.yml
+++ b/pipelines/tracker.yml
@@ -9,6 +9,11 @@ resources:
   type: git
   source:
     uri: https://github.com/cloudfoundry/loggregator-ci
+- name: loggregator
+  type: git
+  source:
+    uri: https://github.com/cloudfoundry/loggregator
+    branch: develop
 
 jobs:
 - name: floodspinner
@@ -72,3 +77,23 @@ jobs:
       APP_DOMAIN: "trkr-dripspinner.aws.trkr.io"
       ORG: "loggregator"
       SPACE: "development"
+
+- name: latency
+  public: false
+  serial: true
+  plan:
+  - get: loggregator
+  - get: loggregator-ci
+  - get: 15m
+    trigger: true
+  - task: run-latency-tests
+    file: loggregator-ci/tasks/latency-test.yml
+    params:
+      APP_DOMAIN: "loggregator-latency.aws.trkr.io"
+      APP_NAME: "loggregator-latency"
+      CF_API: "api.aws.trackerred.com"
+      DATADOG_API_KEY: {{datadog-loggregator-api-key}}
+      ORG: "loggregator"
+      SPACE: "development"
+      USERNAME: {{trkr-username}}
+      PASSWORD: {{trkr-password}}
