--- a/pipelines/loggregator.yml
+++ b/pipelines/loggregator.yml
@@ -245,6 +245,7 @@ jobs:
         - |
           cp cf-deployment/operations/workarounds/use-4-azs-for-router.yml ops-files/
           cp cf-deployment/operations/tcp-routing-gcp.yml ops-files/
+          cp cf-deployment/operations/scale-to-one-az.yml ops-files/
           cp bbl-state/gcp/bbl/ops-files/*.yml ops-files/
 
   - task: cf-deploy
@@ -253,7 +254,7 @@ jobs:
       BBL_STATE_DIR: gcp/bbl
       SYSTEM_DOMAIN: coconut.cf-app.com
       VARS_STORE_FILE: gcp/bbl/deployment-vars.yml
-      OPS_FILES: "clients.yml use-4-azs-for-router.yml rlp.yml tcp-routing-gcp.yml datadog-agent.yml diego.yml"
+      OPS_FILES: "clients.yml use-4-azs-for-router.yml rlp.yml tcp-routing-gcp.yml datadog-agent.yml diego.yml scale-to-one-az.yml"
   - put: deployments-loggregator-with-changes
     params:
       repository: updated-vars-store
