add vars file for router
Signed-off-by: Warren Fernandes <warren.f.fernandes@gmail.com>

--- a/pipelines/loggregator.yml
+++ b/pipelines/loggregator.yml
@@ -255,6 +255,7 @@ jobs:
       SYSTEM_DOMAIN: coconut.cf-app.com
       VARS_STORE_FILE: gcp/bbl/deployment-vars.yml
       OPS_FILES: "clients.yml use-4-azs-for-router.yml rlp.yml tcp-routing-gcp.yml datadog-agent.yml diego.yml scale-to-one-az.yml"
+      VARS_FILES: "gcp/bbl/vars-files/router.yml"
   - put: deployments-loggregator-with-changes
     params:
       repository: updated-vars-store
