Temporarily use cf-release/develop instead of cf-release/release-candidate branch
Signed-off-by: Warren Fernandes <warren.f.fernandes@gmail.com>

--- a/pipelines/loggregator.yml
+++ b/pipelines/loggregator.yml
@@ -24,7 +24,7 @@ resources:
   type: git
   source:
     uri: https://github.com/cloudfoundry/cf-release
-    branch: release-candidate
+    branch: develop
 
 - name: cf-release-develop
   type: git
