make docker images inherit from official golang image
Signed-off-by: JT Archie <jtarchie@gmail.com>

--- a/docker-images/protoc/Dockerfile
+++ b/docker-images/protoc/Dockerfile
@@ -1,4 +1,6 @@
-FROM loggregator/go18
+FROM golang:1.8
+
+RUN go version
 
 # get v3 protoc from github, it was in beta at the time of writing
 RUN cd /tmp \
