--- a/docker-images/bosh20/Dockerfile
+++ b/docker-images/bosh20/Dockerfile
@@ -1,4 +1,6 @@
-FROM loggregator/go18
+FROM golang:1.8
+
+RUN go version
 
 RUN go get -d github.com/cloudfoundry/bosh-cli && go build -o $GOPATH/bin/bosh github.com/cloudfoundry/bosh-cli
 RUN curl -L "https://cli.run.pivotal.io/stable?release=debian64&source=github" > cf.deb && dpkg -i ./cf.deb
