--- a/tasks/scalable-syslog-smoke-test.yml
+++ b/tasks/scalable-syslog-smoke-test.yml
@@ -2,7 +2,7 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-  - repository: loggregator/bosh20
+  - repository: loggregator/base
 inputs:
 - name: scalable-syslog-release
 params:
