--- a/tasks/setup-control-vs-variable-dashboard.yml
+++ b/tasks/setup-control-vs-variable-dashboard.yml
@@ -2,7 +2,7 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: loggregator/bosh20
+    repository: loggregator/base
 inputs:
 - name: control
 - name: variable
