--- a/pipelines/datadog-firehose-nozzle.yml
+++ b/pipelines/datadog-firehose-nozzle.yml
@@ -60,7 +60,7 @@ jobs:
       image_resource:
         type: docker-image
         source:
-        - repository: loggregator/go18
+        - repository: loggregator/base
       platform: linux
       inputs:
       - name: datadog-firehose-nozzle
@@ -90,7 +90,7 @@ jobs:
       image_resource:
         type: docker-image
         source:
-        - repository: loggregator/go18
+        - repository: loggregator/base
       platform: linux
       inputs:
       - name: datadog-firehose-nozzle
@@ -200,7 +200,7 @@ jobs:
       image_resource:
         type: docker-image
         source:
-        - repository: loggregator/bosh20
+        - repository: loggregator/base
       platform: linux
       inputs:
       - name: datadog-firehose-nozzle-release
@@ -268,7 +268,7 @@ jobs:
       image_resource:
         type: docker-image
         source:
-        - repository: loggregator/bosh20
+        - repository: loggregator/base
 
       inputs:
       - name: datadog-firehose-nozzle-release
