--- a/pipelines/health-nozzle.yml
+++ b/pipelines/health-nozzle.yml
@@ -16,7 +16,7 @@ jobs:
       image_resource:
         type: docker-image
         source:
-          repository: loggregator/go18
+          repository: loggregator/base
           tag: latest
       inputs:
         - name: health-nozzle-git
