--- a/pipelines/loggregator-lite.yml
+++ b/pipelines/loggregator-lite.yml
@@ -51,7 +51,7 @@ jobs:
       image_resource:
         type: docker-image
         source:
-          repository: loggregator/ubuntu-base
+          repository: loggregator/base
       inputs:
       - name: updated-deployments-loggregator
       outputs:
@@ -91,7 +91,7 @@ jobs:
       image_resource:
         type: docker-image
         source:
-          repository: loggregator/ubuntu-base
+          repository: loggregator/base
       inputs:
       - name: updated-deployments-loggregator
       outputs:
