--- a/pipelines/loggregator.yml
+++ b/pipelines/loggregator.yml
@@ -114,7 +114,7 @@ jobs:
       image_resource:
         type: docker-image
         source:
-        - repository: loggregator/go18
+        - repository: loggregator/base
       inputs:
       - name: loggregator
       run:
@@ -148,7 +148,7 @@ jobs:
       image_resource:
         type: docker-image
         source:
-        - repository: loggregator/go18
+        - repository: loggregator/base
       inputs:
       - name: loggregator
       outputs:
@@ -484,7 +484,7 @@ jobs:
       image_resource:
         type: docker-image
         source:
-          repository: loggregator/ubuntu-base
+          repository: loggregator/base
       inputs:
       - name: updated-deployments-loggregator
       outputs:
@@ -525,7 +525,7 @@ jobs:
       image_resource:
         type: docker-image
         source:
-        - repository: loggregator/bosh20
+        - repository: loggregator/base
       inputs:
       - name: cats
       - name: deployments-loggregator-with-changes
@@ -662,7 +662,7 @@ jobs:
       image_resource:
         type: docker-image
         source:
-          repository: loggregator/ubuntu-base
+          repository: loggregator/base
       inputs:
       - name: loggregator
       - name: cf-release
