--- a/pipelines/release-elect-regression.yml
+++ b/pipelines/release-elect-regression.yml
@@ -409,7 +409,7 @@ jobs:
               image_resource:
                 type: docker-image
                 source:
-                  repository: loggregator/bosh20
+                  repository: loggregator/base
               inputs:
                 - name: release-elect
               outputs:
@@ -446,7 +446,7 @@ jobs:
               image_resource:
                 type: docker-image
                 source:
-                  repository: loggregator/bosh20
+                  repository: loggregator/base
               inputs:
                 - name: release-latest
               outputs:
