--- a/pipelines/scalable-syslog.yml
+++ b/pipelines/scalable-syslog.yml
@@ -66,7 +66,7 @@ jobs:
       image_resource:
         type: docker-image
         source:
-        - repository: loggregator/go18
+        - repository: loggregator/base
       platform: linux
       inputs:
       - name: scalable-syslog-release
@@ -93,7 +93,7 @@ jobs:
       image_resource:
         type: docker-image
         source:
-          repository: loggregator/go18
+          repository: loggregator/base
       inputs:
       - name: scalable-syslog-release
       - name: scalable-syslog
@@ -115,7 +115,7 @@ jobs:
       image_resource:
         type: docker-image
         source:
-          repository: loggregator/go18
+          repository: loggregator/base
       inputs:
       - name: updated-scalable-syslog-release
       outputs:
@@ -133,7 +133,7 @@ jobs:
       image_resource:
         type: docker-image
         source:
-          repository: loggregator/go18
+          repository: loggregator/base
       inputs:
       - name: synced-scalable-syslog-release
       outputs:
@@ -243,7 +243,7 @@ jobs:
       image_resource:
         type: docker-image
         source:
-          repository: loggregator/ubuntu-base
+          repository: loggregator/base
       inputs:
       - name: updated-deployments-loggregator
       outputs:
@@ -356,7 +356,7 @@ jobs:
       image_resource:
         type: docker-image
         source:
-          repository: loggregator/ubuntu-base
+          repository: loggregator/base
       inputs:
       - name: updated-deployments-loggregator
       outputs:
