--- a/pipelines/statsd-injector.yml
+++ b/pipelines/statsd-injector.yml
@@ -43,7 +43,7 @@ jobs:
       image_resource:
         type: docker-image
         source:
-        - repository: loggregator/go18
+        - repository: loggregator/base
       platform: linux
       inputs:
       - name: statsd-injector-release
@@ -70,7 +70,7 @@ jobs:
       image_resource:
         type: docker-image
         source:
-          repository: loggregator/go18
+          repository: loggregator/base
       inputs:
       - name: statsd-injector-release
       - name: statsd-injector
@@ -92,7 +92,7 @@ jobs:
       image_resource:
         type: docker-image
         source:
-          repository: loggregator/go18
+          repository: loggregator/base
       inputs:
         - name: bumped-statsd-injector-release
       outputs:
@@ -111,7 +111,7 @@ jobs:
       image_resource:
         type: docker-image
         source:
-          repository: loggregator/go18
+          repository: loggregator/base
       inputs:
         - name: synced-statsd-injector-release
       outputs:
@@ -145,7 +145,7 @@ jobs:
       image_resource:
         type: docker-image
         source:
-          repository: loggregator/bosh20
+          repository: loggregator/base
       inputs:
       - name: version
       - name: statsd-injector-release
@@ -185,7 +185,7 @@ jobs:
       image_resource:
         type: docker-image
         source:
-          repository: loggregator/ubuntu-base
+          repository: loggregator/base
       inputs:
       - name: statsd-injector-release
       - name: cf-release
