--- a/pipelines/submodules.yml
+++ b/pipelines/submodules.yml
@@ -45,7 +45,7 @@ jobs:
       image_resource:
         type: docker-image
         source:
-        - repository: loggregator/go18
+        - repository: loggregator/base
       platform: linux
       inputs:
       - name: dropsonde
@@ -62,7 +62,7 @@ jobs:
       image_resource:
         type: docker-image
         source:
-        - repository: loggregator/go18
+        - repository: loggregator/base
       inputs:
       - name: dropsonde
       - name: loggregator
@@ -98,7 +98,7 @@ jobs:
       image_resource:
         type: docker-image
         source:
-          - repository: loggregator/go18
+          - repository: loggregator/base
       inputs:
         - name: noaa
       run:
@@ -115,7 +115,7 @@ jobs:
       image_resource:
         type: docker-image
         source:
-          repository: loggregator/go18
+          repository: loggregator/base
       inputs:
       - name: noaa
       - name: loggregator
@@ -154,7 +154,7 @@ jobs:
       image_resource:
         type: docker-image
         source:
-          repository: loggregator/protoc
+          repository: loggregator/base
       inputs:
       - name: loggregator
       - name: sonde-go
@@ -228,7 +228,7 @@ jobs:
         image_resource:
           type: docker-image
           source:
-          - repository: loggregator/go18
+          - repository: loggregator/base
         platform: linux
         inputs:
         - name: dropsonde
@@ -243,7 +243,7 @@ jobs:
         image_resource:
           type: docker-image
           source:
-            - repository: loggregator/go18
+            - repository: loggregator/base
         inputs:
           - name: noaa
         run:
@@ -257,7 +257,7 @@ jobs:
       image_resource:
         type: docker-image
         source:
-          repository: loggregator/go18
+          repository: loggregator/base
       inputs:
       - name: bumped-sonde-go
       - name: loggregator
