Don't run latency test until the server is ready (Bluemix edge case)
[#145479835]

Signed-off-by: Mark Kollasch <mkollasch@pivotal.io>

--- a/tasks/latency-test.yml
+++ b/tasks/latency-test.yml
@@ -30,6 +30,17 @@ run:
 
       ./cf/push.sh
 
+      attempts=0
+      until [ curl -f $APP_DOMAIN ] do;
+        ((attempts++))
+        if [ "$attempts" -gt 600 ]
+        then
+          echo "$APP_DOMAIN failed to respond with a successful status. Aborting latency test."
+          exit 1
+        fi
+        sleep 1
+      done
+
       latency=$(curl "$APP_DOMAIN/latency?samples=100")
 
       currenttime=$(date +%s)
