Suppress messages and early failures while waiting to execute latency test
Signed-off-by: Mark Kollasch <mkollasch@pivotal.io>

--- a/tasks/latency-test.yml
+++ b/tasks/latency-test.yml
@@ -30,6 +30,8 @@ run:
 
       ./cf/push.sh
 
+      set +e
+      set +x
       attempts=0
       until curl -f $APP_DOMAIN; do
         ((attempts++))
@@ -40,6 +42,7 @@ run:
         fi
         sleep 1
       done
+      set -ex
 
       latency=$(curl "$APP_DOMAIN/latency?samples=100")
 
