--- a/tasks/release-elect-regression/setup-datadog-dashboard.yml
+++ b/tasks/release-elect-regression/setup-datadog-dashboard.yml
@@ -2,7 +2,7 @@ platform: linux
 image_resource:
   type: docker-image
   source:
-    repository: loggregator/bosh20
+    repository: loggregator/base
 inputs:
 - name: release-latest
 - name: release-elect
